<resources>
    <string name="app_name">Agenda</string>

    <string name="add_contact">Add contact</string>
    <string name="new_contact">New Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="deleted_contact">Contact deleted</string>
    <string name="changes_saved">Changes saved</string>
    <string name="undo">UNDO</string>
    <string name="search">Search</string>
    <string name="watch">Details</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="error_form">Fix errors before continue</string>
    <string name="error_empty">Name must not be empty</string>
    <string name="error_constraint">Contact with that name already exists</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="error_email">Invalid email format</string>
    <string name="error_phone">Invalid phone</string>
    <string name="save">Save</string>

    <string name="show_contact_name">Name: %1$s</string>
    <string name="show_contact_email">Email: %1$s</string>
    <string name="show_contact_phone">Phone: %1$s</string>
    <string name="contact_image">Contact\'s Image</string>

    <string-array name="contact_options">
        <item>Details</item>
        <item>Edit</item>
        <item>Delete</item>
    </string-array>

</resources>